# mcp

./: Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  example_usage.py  pyproject.toml
.github/workflows/: docker-release.yml
examples/: test_tools.py
examples/nipoppy_dataset/: global_config.json  manifest.tsv
examples/nipoppy_dataset/pipelines/fmriprep-20.2.7/: config.json
examples/nipoppy_dataset/pipelines/freesurfer-7.1.1/: config.json
nipoppy_mcp/: __init__.py  server.py
tests/: test_server.py
