[project]
name = "nipoppy-mcp"
version = "0.1.0"
description = "Model Context Protocol interface for Nipoppy neuroimaging datasets"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["mcp", "nipoppy>=0.4.3"]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["nipoppy_mcp"]
